--- a/inblensa/templates/app/index.html
+++ b/inblensa/templates/app/index.html
@@ -28,6 +28,7 @@
         <link href="/static/app/css/select.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/css/bootstrap-select.min.css" rel="stylesheet">
         <link href="/static/app/css/sweetalert.css" rel="stylesheet">
+        <link href="/static/jquery-ui/jquery-ui.css" rel="stylesheet">
         {% block css-content %}
         {% endblock css-content %}
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -846,6 +847,8 @@
         <script src="/static/app/js/select/select2.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/bootstrap-select.min.js"></script>
         <script src="/static/app/js/sweet-alert/sweetalert.min.js"></script>
+        <script src='/static/jquery-ui/jquery-ui.min.js'></script>
+
 {#        <script src="/static/app/js/index2.js"></script>#}
         <script>
             function loadDatePicker() {
