--- a/inblensa/templates/inventario/proformas.html
+++ b/inblensa/templates/inventario/proformas.html
@@ -108,6 +108,9 @@
             $("#btnNuevoPedido").on('click',function () {
                 nuevoPedido();
             });
+
+
+
         });
         function init_atocomple_productos(){
           var ms = $('#searchProducto').magicSuggest({
@@ -170,6 +173,22 @@
                       keyboard: false
                     });
                     init_atocomple_productos();
+
+
+                    complete_cliente = function() {
+                               $(this).autocomplete({
+                                 minLength: 2,
+                                 source: "/ajax/autocomplete_object_execute/?app_label=base&model=cliente&method=",
+                                 select: function (i, o) {
+                                   console.log(o.item.obj.id);
+                                   //$("#"+$(this).attr('id')+"_").val(o.item.obj.id);
+                                 },error(e)
+                                 {
+                                   console.log(e);
+                                 }
+                               });
+                           };
+                 $('.nombre_cliente').on('keyup', complete_cliente)
                 }
             });
         }
