--- a/inblensa/templates/inventario/proformas.html
+++ b/inblensa/templates/inventario/proformas.html
@@ -188,7 +188,7 @@
                                  }
                                });
                            };
-                 $('.nombre_cliente').on('keyup', complete_cliente)
+                 $('#nombre_cliente').on('keyup', complete_cliente)
                 }
             });
         }
