--- a/inblensa/templates/inventario/proformas.html
+++ b/inblensa/templates/inventario/proformas.html
@@ -178,7 +178,7 @@
                     complete_cliente = function() {
                                $(this).autocomplete({
                                  minLength: 2,
-                                 source: "/ajax/autocomplete/?app_label=base&model=cliente",
+                                 source: "/ajax/autocomplete/?app_label=inblensa&model=cliente&column_name=nombre",
                                  select: function (i, o) {
                                    console.log(o.item.obj.id);
                                    //$("#"+$(this).attr('id')+"_").val(o.item.obj.id);
