--- a/inblensa/templates/inventario/partial/_pedido.html
+++ b/inblensa/templates/inventario/partial/_pedido.html
@@ -1,4 +1,6 @@
-
+<style>
+    .ui-autocomplete { position: absolute; cursor: default;z-index:10000 !important;}
+</style>
  <div class="row">
     <div class="form-group">
         <label class="col-sm-4 control-label">Vendedor:</label>
