--- a/inblensa/templates/inventario/proformas.html
+++ b/inblensa/templates/inventario/proformas.html
@@ -180,7 +180,11 @@
                                  minLength: 2,
                                  source: "/ajax/autocomplete/?app_label=inblensa&model=cliente&column_name=nombre",
                                  select: function (i, o) {
-                                   console.log(o.item.obj.id);
+                                    $("#id_cliente").val(o.item.obj.id)
+                                    $("#direccion_cliente").val(o.item.obj.direccion)
+                                    $("#cedula_cliente").val(o.item.obj.identificacion)
+                                    $("#telefono_cliente").val(o.item.obj.telefono)
+
                                    //$("#"+$(this).attr('id')+"_").val(o.item.obj.id);
                                  },error(e)
                                  {
