--- a/inblensa/templates/inventario/partial/_pedido.html
+++ b/inblensa/templates/inventario/partial/_pedido.html
@@ -19,7 +19,7 @@
                   <label class="control-label col-sm-3  col-xs-12"><span class="red">*</span> Nombre:</label>
                   <div class="controls col-sm-3  col-xs-12">
                     <input type="text" class="form-control" id="nombre_cliente" name="nombre_cliente" class="requerido">
-                    <input type="hidden" class="form-control" id="id_cliente" name="id_cliente" class="requerido">
+                    <input type="hidden" class="form-control" id="id_cliente" name="cliente" class="requerido">
                   </div>
             </div>
             <div class="control-group">
