--- a/inblensa/templates/inventario/plantilla_factura.html
+++ b/inblensa/templates/inventario/plantilla_factura.html
@@ -132,8 +132,8 @@
                     <div class=" panel-body ">
                      Email: usted@ejemplo.com
                      Móvil: +92123456789
-                     Twitter: <a href="https://twitter.com/suTwitter">@suTwitter</a> |Suweb: <a href="http://www.suweb.com/author/usted"> http: //www. suweb.com/author/usted / </a>
-                    <h4><small> El pago debe ser por transferencia bancaria </h4>
+                     Twitter: <a href="https://twitter.com/suTwitter">@suTwitter</a> | web: <a href="http://www.inblensa.com"> http: //www. inblensa.com / </a>
+                    <h4><small> Puede realizar su pago por transferencia bancaria </h4>
                     </div>
                 </div>
             </div>
