--- a/inblensa/templates/inventario/partial/_pedido.html
+++ b/inblensa/templates/inventario/partial/_pedido.html
@@ -5,8 +5,8 @@
     <div class="form-group">
         <label class="col-sm-4 control-label">Vendedor:</label>
         <div class="col-sm-8">
-            <input type="text" name="name_vendedor" value="{{ actual_vendedor }}" class="form-control" readonly id="name_vendedor">
-            <input name="vendedor" type="hidden" value="{{ actual_vendedor.id }}">
+            <input type="text" name="name_vendedor" value="{{ vendedor.usuario.username }}" class="form-control" readonly id="name_vendedor">
+            <input name="vendedor" type="hidden" value="{{ vendedor.id }}">
         </div>
     </div>
 </div>
